# dstoolkit-genai-shap

./: .env.template  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
docs/examples/: 01-create-test-dataset-azure-ai-search.ipynb  01-create-test-dataset.ipynb  02-gaishap-featurizer.ipynb  02-genaishap-example.ipynb  02-genaishap-featurizer.ipynb  03-gaishap-blackbox-model.ipynb  03-genaishap-explainers.ipynb  PaulGrahamEssayDataset.txt  common.py  config.yml  llamaindex.ipynb  test-dataset-azure.json  test-dataset.json  test-features.json
docs/examples/data/: rag_dataset.json
gaishap/prompts/: create_features_prompt.txt  fill_features_prompt.txt
notebooks/: getting-started.ipynb
src/gaishap/: __init__.py  _utils.py  explainer.py  featurize.py  prompts.py
